Fixes inconsistent console problem
The `open console` link in `Network Topology` page is inconsistent with
console in `Instance Detail` page.

Fixes bug 1228990

Change-Id: I845a9fa4cc17a296bde5da624d3b8833fef9ade6

--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_container.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/client_side/_balloon_container.html
@@ -16,7 +16,7 @@
       <div class="cell link">
         <a href="[[url]]">» view [[type]] details</a>
         [[#console_id]]
-        <a href="[[url]]vnc" class="vnc_window">» open console</a>
+        <a href="[[url]][[console]]" class="vnc_window">» open console</a>
         [[/console_id]]
       </div>
       <div class="cell delete">
