--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -890,6 +890,29 @@ div.table_cell_wrapper {
 }
 #external_links li { margin: 0 0 0 15px; }
 
+
+/* Formset data tables. */
+
+.datatable {
+  th.narrow {
+    width: 1em;
+  }
+
+  input {
+    padding: 2px 5px;
+    margin: 0;
+  }
+
+  th span.required:after {
+    content: "*";
+    font-weight: bold;
+    line-height: 0;
+    padding-left: 4px;
+    color: #3290c0;
+  }
+}
+
+
 /* Forms */
 
 form label {
