Allow customization of logo link
Adding code to allow logo link at the top of the navigation panel
to be configurable.

Close-bug: #1245630

Change-Id: Id5880d3b4fae1ce2d1d8821cc5cf3b2184ea11c9

--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -2,7 +2,7 @@
 {% load url from future %}
 
 <div class='sidebar'>
-  <h1 class="brand clearfix"><a href="{% url 'horizon:user_home' %}">{% site_branding %}</a></h1>
+  <h1 class="brand clearfix"><a href="{% site_branding_link %}">{% site_branding %}</a></h1>
 
   {% horizon_main_nav %}
 
