Show AZ for instances
Display availability zone of an instance in the
instances table and the details page.

Fixes bug #1247251

Change-Id: Idd9165022ac149208f1860758989ef9ce5acb10e

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -13,6 +13,8 @@
     <dd>{{ instance.id }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ instance.status|title }}</dd>
+    <dt>{% trans "Availability Zone" %}</dt>
+    <dd>{{ instance.availability_zone|default:"-" }}</dd>
     <dt>{% trans "Created" %}</dt>
     <dd>{{ instance.created|parse_isotime }}</dd>
     <dt>{% trans "Uptime" %}</dt>
