Make the alert type in horizon.alert translatable
Instead of just capitalizing the class name, I do a lookup in a
dictionary of human-readable (and translatable) names for the
different alert types. This also lets me use "Notice" in place of
"info", which sounds better at least to my ears.

Change-Id: I985c25a7228aee9cf1cbce222cec4bca0db05d35
Closes-bug: #1224347

--- a/horizon/templates/horizon/client_side/_alert_message.html
+++ b/horizon/templates/horizon/client_side/_alert_message.html
@@ -8,7 +8,7 @@
 <div class="alert alert-block fade in alert-[[type]]">
   <a class="close" data-dismiss="alert" href="#">&times;</a>
   <p>
-    <strong>[[type_capitalized]]: </strong>
+    <strong>[[type_display]]: </strong>
     [[#safe]]
       [[[message]]]
     [[/safe]]
