Enhancements of line-chart
- Adding settings to linechart
  - all parts are configurable now, so it can be used e.g. as smaller
    version for sparklines
  - auto_size and auto_resize are now configurable
  - added option for static y axis, drafted how it will be done
    for static x axis

- Added inline documentation of each function and method

Implements blueprint horizon-reusable-charts

Change-Id: I4352bc7946d3141bacc1c964de61e55a42521da6

--- a/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
+++ b/openstack_dashboard/dashboards/admin/metering/templates/metering/stats.html
@@ -149,7 +149,8 @@
 
 <script type="text/javascript">
   if (typeof horizon.d3_line_chart !== 'undefined') {
-    horizon.d3_line_chart.init("div[data-chart-type='line_chart']");
+    horizon.d3_line_chart.init("div[data-chart-type='line_chart']",
+      {'auto_resize': true});
   }
 
   if (typeof $ !== 'undefined') {
