AngularJS + base horizon module
  Implements: blueprint angularjs-javascript-frontend-framework
  Adds AngularJS 1.2.1
  Adds Base horizon module with no functionality

Change-Id: I02da3e095848fae83c3a75ea90dcf0e6d3e6b772

--- a/horizon/templates/base.html
+++ b/horizon/templates/base.html
@@ -11,7 +11,7 @@
     {% include "horizon/_conf.html" %}
     {% include "horizon/client_side/_script_loader.html" %}
   </head>
-  <body id="{% block body_id %}{% endblock %}">
+  <body id="{% block body_id %}{% endblock %}" ng-app='horizonApp'>
     {% block content %}
       <div id="container">
         {% block sidebar %}
