Display error message in instance detials page
display the message when there is "fault" field from nova instance

Change-Id: I483691d7a11e3a0fa2c4f2468ec3680a4cd4a3a3
Closes-Bug: #1255391

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_overview.html
@@ -22,6 +22,23 @@
   </dl>
 </div>
 
+{% if instance.fault %}
+<div class="status row-fluid detail">
+  <h4>{% trans "Fault" %}</h4>
+  <hr class="header_rule">
+  <dl>
+    <dt>{% trans "Message" %}</dt>
+    <dd>{{ instance.fault.message }}</dd>
+    <dt>{% trans "Code" %}</dt>
+    <dd>{{ instance.fault.code }}</dd>
+    <dt>{% trans "Details" %}</dt>
+    <dd>{{ instance.fault.details }}</dd>
+    <dt>{% trans "Created" %}</dt>
+    <dd>{{ instance.fault.created|parse_isotime }}</dd>
+  </dl>
+</div>
+{% endif %}
+
 <div class="specs row-fluid detail">
   <h4>{% trans "Specs" %}</h4>
   <hr class="header_rule">
