Add parse_isotime filter to Image created and updated date strings.
Change-Id: I1fb6385a9b83c22a5a02331d7340c5b933149cf9
Closes-Bug: #1256756

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
@@ -23,9 +23,17 @@
     <dt>{% trans "Checksum" %}</dt>
     <dd>{{ image.checksum }}</dd>
     <dt>{% trans "Created" %}</dt>
-    <dd>{{ image.created_at|default:_("Unknown") }}</dd>
+    {% if image.created_at %}
+      <dd>{{ image.created_at|parse_isotime }}</dd>
+    {% else %}
+      <dd>{% trans "Unknown" %}</dd>
+    {% endif %}
     <dt>{% trans "Updated" %}</dt>
-    <dd>{{ image.updated_at|default:_("Never updated") }}</dd>
+    {% if image.updated_at %}
+      <dd>{{ image.updated_at|parse_isotime }}</dd>
+    {% else %}
+      <dd>{% trans "Never updated" %} }}</dd>
+    {% endif %}
   </dl>
 </div>
 
