--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_update_networks.html
@@ -5,7 +5,7 @@
   <tbody>
     <tr>
       <td class="actions">
-        <h4 id="selected_network_h4">{% trans "Selected Networks" %}</h4>
+        <h4 id="selected_network_h4">{% trans "Selected Networks*" %}</h4>
         <ul id="selected_network" class="networklist">
         </ul>
         <h4>{% trans "Available networks" %}</h4>
