Show volume quota graphs if totalVolumesUsed >= 0
commit 9bca5d3680ee21d2b92ba6766f13b5d216fc477f fixed the
volume quota display, but quotas are hidden if a project has a used
quota of 0. I don't think we should hide the quotas in this case,
as users still need to know how much quota is available, even if they
haven't used any of it yet.

Change-Id: I72c0fae1a51cafabfcde8970c94097069083dd06
Partial-Bug: #1244875

--- a/horizon/templates/horizon/common/_limit_summary.html
+++ b/horizon/templates/horizon/common/_limit_summary.html
@@ -36,7 +36,7 @@
       {% blocktrans with used=usage.limits.totalSecurityGroupsUsed|intcomma available=usage.limits.maxSecurityGroups|quotainf|intcomma%}Used <span> {{ used }} </span> of <span> {{ available  }} </span>{% endblocktrans %}
     </strong>
     </div>
-  {% if usage.limits.totalVolumesUsed %}
+  {% if usage.limits.totalVolumesUsed >= 0 %}
     <div class="d3_quota_bar">
       <div class="d3_pie_chart" data-used="{% widthratio usage.limits.totalVolumesUsed usage.limits.maxTotalVolumes 100 %}"></div>
       <strong>{% trans "Available Volumes" %} <br />
