Object Upload validated on client side
    Perform a js validation of the Object Upload name. If the name is
not entered, the submit button will appears disabled.

Fixes bug #1125232
Change-Id: Id33f3999e9267f5fc58eb55406fc5b763597839b
Co-Authored-By: Cristian A Sanchez <cristian.a.sanchez@intel.com>

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -10,6 +10,8 @@
 
 <script src="{{ STATIC_URL }}horizon/lib/angular.js" type="text/javascript" charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/js/angular/horizon.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/angular/controllers/dummy.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/angular/directives/forms.js' type='text/javascript' charset='utf-8'></script>
 
 <script src='{{ STATIC_URL }}horizon/lib/jquery/jquery.cookie.js' type='text/javascript' charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/lib/jquery/jquery.quicksearch.js' type='text/javascript' charset="utf-8"></script>
