--- a/openstack_dashboard/dashboards/admin/flavors/templates/flavors/extras/_edit.html
+++ b/openstack_dashboard/dashboards/admin/flavors/templates/flavors/extras/_edit.html
@@ -3,7 +3,7 @@
 {% load url from future %}
 
 {% block form_id %}extra_spec_edit_form{% endblock %}
-{% block form_action %}{% url 'horizon:admin:flavors:extras:create' flavor.id %}{% endblock %}
+{% block form_action %}{% url 'horizon:admin:flavors:extras:edit' flavor.id key %}{% endblock %}
 
 
 {% block modal_id %}extra_spec_edit_modal{% endblock %}
