Decrypt and display VM generated password
Add optional Retrieve Password action on instance that allows users
to decrypt, on client side, the password generated for the Admin
session.

Change-Id: I37cc93ae7871bf78e90513f58e169883fbfd1621
Implements: blueprint decrypt-and-display-vm-generated-password

--- a/horizon/templates/horizon/qunit.html
+++ b/horizon/templates/horizon/qunit.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}horizon/tests/modals.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}horizon/tests/templates.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}horizon/tests/tables.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}horizon/tests/instances.js"></script>
     {% comment %}End test modules.{% endcomment %}
 
     {% include "horizon/_scripts.html" %}
