give a fullscreen attribute to workflow, for modal view
add a fullscreen attribute on Workflow (default to False)
use the fullscreen class in workflow template if True
add .modal.fullscreen rule in horizon.less
add documentation of the fullscreen attribute on Workflow
rework modal system to use a layout context variable, use static_page if
not modal, modal else, and use fullscreen if workflow is fullscreen
add tests for fullscreen logic

implements bp Modals-and-supporting-different-screen-sizes
Change-Id: I8663067ed655d60365857c237732fe4f5cc1e982

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -929,6 +929,12 @@ form label {
     position: absolute;
 }
 
+.modal.fullscreen {
+  width: 90%;
+  margin: auto;
+  left: 5%;
+}
+
 .modal.loading {
   width: 150px;
   height: 150px;
