Same styling for "Limit Summary" and "Usage Summary"
"Usage Summary" as heading instead of "Select a month.."

Submit button styling is changed.

Change-Id: Ie19e8fd16a4db11a67267513cef82ad9e0c41c29
Closes-Bug: #1100830

--- a/horizon/templates/horizon/common/_limit_summary.html
+++ b/horizon/templates/horizon/common/_limit_summary.html
@@ -1,7 +1,7 @@
 {% load i18n horizon humanize sizeformat %}
 
 <div class="quota-dynamic">
-  <h3>{% trans "Limit Summary" %}</h3>
+  <h3 class="quota-heading">{% trans "Limit Summary" %}</h3>
     <div class="d3_quota_bar">
     <div class="d3_pie_chart" data-used="{% widthratio usage.limits.totalInstancesUsed usage.limits.maxTotalInstances 100 %}"></div>
      <strong>{% trans "Instances" %} <br />
