--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -2235,6 +2235,12 @@ label.log-length {
   top: -100px;
 }
 
+.quota-heading {
+  font-family: anivers;
+  font-weight: normal;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
 
 /**** Resource Topology CSS ****/
 .link {stroke: #999;stroke-width: 1.5px;}
